terraform/modules/longhorn/files/longhorn-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend-server
  namespace: ${longhorn_namespace}
spec:
  ingressClassName: traefik
  rules:
  - host: ${longhorn_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
